--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="main-content">
       <header class="box-a header">
         <div class="flip">
-          <h1 class="head">Meet the brain</h1>
+          <h1 class="heading">Meet the brain</h1>
           <span class="subhead">Our team</span>
         </div>
         <p>We are proud to have them as part of our community and look forward to continuing to push the boundaries of what's possible in the world of digital art.</p>
